# Mabu

./: .gitignore  MABU_MOTOR_GUIDE.md  README.md  setup-llama.ps1
apks/: KISS.apk
firmware/: README.md
firmware/originals/: parameter.img
firmware/patches/: parameter-patched.img
guides/: MABU_BUILD_GUIDE.md
log/: log2026-05-25.txt
mabu-android/: .gitignore  HANDOFF.md  README.md  settings.gradle.kts
mabu-android/app/: build.gradle.kts  proguard-rules.pro
mabu-android/app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp  serial.c
mabu-app/: README.md  face-mirror.py  mabu.py  setup-and-run.sh
mabu-archive/: README.md
mabu-archive/unit-2022010500480/: dumpsys-device_policy.txt  dumpsys-package-io.shoonya.shoonyadpc.txt  dumpsys-user.txt  getprop.txt
mabu-archive/unit-2022010501476/: dumpsys-device_policy.txt  dumpsys-package-com.catalia.factorymode.txt  dumpsys-package-com.shoonyaos.oculus.plugin.supervisor.h7r.txt  dumpsys-package-io.esper.otamanager.txt  dumpsys-package-io.esper.remoteviewer.txt  dumpsys-package-io.shoonya.helper.txt  (+4 more)
mabu-facetrack/: BridgeProblem.md  settings.gradle.kts
notes/: HANDOFF.md  access-attempts.md  loader-readout.md  maskrom-plan.md  motor-protocol.md  partition-table.md
pc-brain/: .gitignore  README.md  chatterbox_server.py  control_server.py  models.json  persona_control.py  persona_manager.py  pipecat_bot.py  run-all.ps1  run-chatterbox.ps1  run-llm.ps1  run-pipecat.ps1  run-whisperlive.ps1  setup-chatterbox.ps1  setup-pipecat.ps1  setup-whisperlive.ps1  stop-all.ps1  whisperlive_stt.py
scripts/: README.md  analyze-dump.ps1  bind-winusb.ps1  catch-loader-and-dump.ps1  check-usb.ps1  dump-all.py  dump-partitions.ps1  dump-range.ps1  dump-system-cycled.ps1  find-app-dirs.py  find-eocd.py  find-esper-apks.py  find-esper-files.py  find-esper.py  find-prop-default.py  flash-mabu.ps1  inspect-tablet.ps1  install-android-driver.ps1  install-tools.ps1  liberate-mabu.ps1  mabu-motor-test.py  patch-bootimg.py  patch-parameter.py  reset-driver.ps1  restore-adb-auth.ps1  restore-boot.ps1  rockusb.py  roundtrip-test.py  watch-usb.ps1  wedge-probe.ps1  wipe-data-head.ps1  write-patched-boot.ps1
selinux/: README.md  apply-patch.sh  mabu_serial_access.te
(+73 files in other folders)
